[package]
name = "advent_of_code_2017_rs"
version = "0.1.0"
authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]

# Friday 01.12
[[bin]]
name = "day1_1"
path = "src/day1/1.rs"
[[bin]]
name = "day1_2"
path = "src/day1/2.rs"

# Saturday 02.12
[[bin]]
name = "day2_1"
path = "src/day2/1.rs"
[[bin]]
name = "day2_2"
path = "src/day2/2.rs"



[dependencies]
